CHAT-867 Alignement issue when open chat the first time on IE11

--- a/application/src/main/webapp/css/components/chat.less
+++ b/application/src/main/webapp/css/components/chat.less
@@ -86,6 +86,7 @@
   .flex-column;
   flex: 1;
   background: url('@{imgPath}/no-conversation.png') no-repeat center;
+  text-align: center;
   > span {
     margin: auto;
   }
